Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-49034

WinRT: Warning "failed to retrieve input pane statics" is shown on application startup, if winrt is used in "desktop" mode

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.6.0 Beta
    • 5.6.0 Alpha
    • None
    • Windows 8.1 enterprise
      winrt-x64-msvc2013
    • WinRT
    • 39639694c897def9161360277eb39bc871ac53f9

      No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          mkalinow Maurice Kalinowski
          owolff Oliver Wolff
          Votes:
          0 Vote for this issue
          Watchers:
          1 Start watching this issue

            Created:
            Updated:
            Resolved:

              There are no open Gerrit changes