winrt: move input context creation into xaml thread

This way we ensure that creation always works and we can access the
input pane statics.

Task-number: QTBUG-49034
Change-Id: I5d0340a7f6304b717f17f2106134fa9d083a7fde
Reviewed-by: Samuel Nevala <samuel.nevala@intopalo.com>
Reviewed-by: Andrew Knight <andrew.knight@intopalo.com>

cregit: 39639694c897def9161360277eb39bc871ac53f9 https://github.com/qt/qtbase/commit/39639694c897def9161360277eb39bc871ac53f9